--- a/src/components/Artist/Avatar.scss
+++ b/src/components/Artist/Avatar.scss
@@ -1,33 +1,34 @@
 .avatar-box {
-    align-self: center;
-    position: relative;
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    overflow: hidden;
-    .avatar-upload {
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        display: none;
-        text-align: center;
-        line-height: 80px;
-        font-size: 12px;
-        color: #fff;
-        background-color: #01000091;
-        cursor: pointer;
-        input {
-            display: none;
-        }
-        &.show {
-            display: block;
-        }
+  align-self: center;
+  position: relative;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-top: 10px;
+  .avatar-upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    text-align: center;
+    line-height: 80px;
+    font-size: 12px;
+    color: #fff;
+    background-color: #01000091;
+    cursor: pointer;
+    input {
+      display: none;
     }
-    img {
-        display: block;
-        width: 100%;
-        height: 100%;
+    &.show {
+      display: block;
     }
+  }
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
 }
