--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,35 +1,38 @@
 .header {
-    display: flex;
-    align-items: center;
-    height: 100px;
-    .logo-box {
-        margin-left: 40px;
-        height: 80px;
-        width: 80px;
-        img {
-            display: block;
-            width: 100%;
-            height: 100%;
-        }
+  display: flex;
+  align-items: center;
+  height: 100px;
+  .logo-box {
+    margin-top: -10px;
+    margin-left: 20px;
+    height: 70px;
+    width: 70px;
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
     }
-    .home-index {
-        margin-left: 20px;
-        a {
-            font-size: 40px;
-        }
+  }
+  .home-index {
+    margin-left: 20px;
+    a {
+      font-size: 40px;
     }
-    .right-nav {
-        margin-left: auto;
-        margin-right: 120px;
-        ul {
-            display: flex;
-            li + li {
-                margin-left: 15px;
-            }
-        }
+  }
+  .right-nav {
+    margin-left: auto;
+    margin-right: 120px;
+    ul {
+      display: flex;
+      li + li {
+        margin-left: 15px;
+      }
     }
+  }
 }
 
-ul,ol,li {
-    list-style-type: none;
+ul,
+ol,
+li {
+  list-style-type: none;
 }
